🔧 chore(.vscode): 移除 copilot,chat,gitlens 非统一的配置项

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -101,6 +101,11 @@
     "**/*cache": true,
     "**/__pycache__": true
   },
+  "emmet.includeLanguages": {},
+  "prettier.enable": true,
+  "prettier.printWidth": 120,
+  "prettier.singleQuote": true,
+  "prettier.endOfLine": "auto",
   "python.analysis.autoImportCompletions": true,
   "python.analysis.typeCheckingMode": "standard",
   "python.analysis.inlayHints.functionReturnTypes": true,
@@ -110,37 +115,5 @@
   "git.autofetch": true,
   "git.enableSmartCommit": true,
   "git.confirmSync": false,
-  "github.copilot.enable": {
-    "*": true,
-    "plaintext": true,
-    "markdown": true,
-    "scminput": true
-  },
-  "github.copilot.nextEditSuggestions.enabled": true,
-  "gitlens.ai.model": "vscode",
-  "gitlens.ai.vscode.model": "copilot:gpt-4o-mini",
-  "gitlens.views.commitDetails.files.layout": "tree",
-  "gitlens.graph.dateFormat": "YYYY.MM.DD HH:mm:ss",
-  "gitlens.graph.dimMergeCommits": true,
-  "gitlens.graph.showRemoteNames": true,
-  "gitlens.graph.dateStyle": "relative",
-  "gitlens.views.contributors.showStatistics": true,
-  "gitlens.views.contributors.files.layout": "tree",
-  "emmet.includeLanguages": {},
-  "prettier.enable": true,
-  "prettier.printWidth": 120,
-  "prettier.singleQuote": true,
-  "prettier.endOfLine": "auto",
-  "chat.editing.confirmEditRequestRemoval": false,
-  "chat.mcp.gallery.enabled": true,
-  "chat.agent.thinkingStyle": "collapsedPreview",
-  "chat.agentSessionsViewLocation": "single-view",
-  "chat.allowAnonymousAccess": false,
-  "chat.checkpoints.showFileChanges": true,
-  "chat.editing.autoAcceptDelay": 1,
-  "chat.emptyState.history.enabled": true,
-  "chat.tools.terminal.autoReplyToPrompts": true,
-  "inlineChat.enableV2": true,
-  "inlineChat.lineEmptyHint": true,
-  "inlineChat.notebookAgent": true
+  "github.copilot.chat.localeOverride": "zh-CN"
 }
