--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,26 +37,29 @@ jobs:
         with:
           python-version: '3.14'
 
-      # 4. 安装 Commitizen（发版工具）
-      - name: 📦 安装 Commitizen
-        run: pip install commitizen
+      # 4. 安装 uv 并同步项目依赖
+      - name: 📦 安装 uv 和同步依赖
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          uv venv
+          uv pip install commitizen
 
       # 5. 自动升级版本号并生成 CHANGELOG
       - name: 🔖 升级版本号并更新日志
         id: bump_version
         run: |
           # 1. 获取当前版本
-          CURRENT_VERSION=$(cz version --project)
+          CURRENT_VERSION=$(uv run cz version --project)
           echo "📌 当前版本: $CURRENT_VERSION"
 
           # 2. 执行版本升级 (捕获退出码)
           set +e
-          cz bump --yes --changelog
+          uv run cz bump --yes --changelog
           BUMP_EXIT_CODE=$?
           set -e
 
           # 3. 获取升级后的新版本, 将版本输出到 GitHub Actions 变量
-          NEW_VERSION=$(cz version --project)
+          NEW_VERSION=$(uv run cz version --project)
           echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "📌 新版本: $NEW_VERSION"
 
