--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,8 @@ jobs:
   release:
     name: 📦 创建发布版本
     runs-on: ubuntu-latest
+    # 跳过 commitizen 自动生成的 release 类型提交
+    if: "!contains(github.event.head_commit.message, 'release(')"
     outputs:
       version_changed: ${{ steps.bump_version.outputs.version_changed }}
       new_version: ${{ steps.bump_version.outputs.new_version }}
@@ -37,12 +39,11 @@ jobs:
         with:
           python-version: '3.14'
 
-      # 4. 安装 uv 并同步项目依赖
-      - name: 📦 安装 uv 和同步依赖
+      # 4. 安装 uv 和 commitizen（仅需版本管理工具）
+      - name: 📦 安装 uv 和 commitizen
         run: |
           curl -LsSf https://astral.sh/uv/install.sh | sh
-          uv venv
-          uv pip install commitizen
+          uv pip install --system commitizen
 
       # 5. 自动升级版本号并生成 CHANGELOG
       - name: 🔖 升级版本号并更新日志
