--- a/requirements.txt
+++ b/requirements.txt
@@ -122,8 +122,6 @@ idna==3.11
     #   httpx
 iniconfig==2.3.0
     # via pytest
-ip2loc==1.0.0
-    # via fastapi-service
 itsdangerous==2.2.0
     # via fastapi-service
 jinja2==3.1.6
@@ -168,6 +166,8 @@ prompt-toolkit==3.0.51
     #   commitizen
     #   questionary
 psutil==7.1.3
+    # via fastapi-service
+py-ip2region==3.0.2
     # via fastapi-service
 pyasn1==0.6.1
     # via
