--- a/ruff.toml
+++ b/ruff.toml
@@ -55,9 +55,9 @@ combine-as-imports = true
 known-first-party = ["backend"]
 
 [lint.per-file-ignores]
+"**/__init__.py" = ["F401", "F403"]
 "**/api/**/*.py" = ["TC"]
 "**/model/*.py" = ["TC003"]
-"**/model/__init__.py" = ["F401"]
 "**/tests/*.py" = ["E402", "S101"]
 "**/alembic/versions/*.py" = ["E501", "F401", "I001"]
 
