--- a/ruff.toml
+++ b/ruff.toml
@@ -58,6 +58,7 @@ known-first-party = ["backend"]
 "**/__init__.py" = ["F401", "F403"]
 "**/api/**/*.py" = ["TC"]
 "**/model/*.py" = ["TC003"]
+"**/schema/*.py" = ["TC001", "TC002"]
 "**/tests/*.py" = ["E402", "S101"]
 "**/alembic/versions/*.py" = ["E501", "F401", "I001"]
 
