--- a/requirements.txt
+++ b/requirements.txt
@@ -79,16 +79,16 @@ exceptiongroup==1.3.1
     # via celery
 fast-captcha==0.3.2
     # via fastapi-service
-fastapi==0.124.4
+fastapi==0.128.0
     # via
     #   fastapi-limiter
     #   fastapi-pagination
     #   fastapi-service
-fastapi-cli==0.0.16
+fastapi-cli==0.0.20
     # via fastapi
 fastapi-limiter==0.1.6
     # via fastapi-service
-fastapi-pagination==0.15.3
+fastapi-pagination==0.15.4
     # via fastapi-service
 filelock==3.20.1
     # via virtualenv
@@ -111,7 +111,7 @@ httptools==0.7.1
     # via uvicorn
 httpx==0.28.1
     # via fastapi
-humanize==4.14.0
+humanize==4.15.0
     # via flower
 identify==2.6.15
     # via pre-commit
@@ -144,7 +144,7 @@ mdurl==0.1.2
     # via markdown-it-py
 msgspec==0.20.0
     # via fastapi-service
-nodeenv==1.9.1
+nodeenv==1.10.0
     # via pre-commit
 packaging==25.0
     # via
@@ -157,7 +157,7 @@ platformdirs==4.5.1
     # via virtualenv
 pluggy==1.6.0
     # via pytest
-pre-commit==4.5.0
+pre-commit==4.5.1
 prometheus-client==0.23.1
     # via flower
 prompt-toolkit==3.0.51
@@ -165,7 +165,9 @@ prompt-toolkit==3.0.51
     #   click-repl
     #   commitizen
     #   questionary
-psutil==7.1.3
+psutil==7.2.0
+    # via fastapi-service
+pwdlib==0.3.0
     # via fastapi-service
 py-ip2region==3.0.2
     # via fastapi-service
@@ -180,12 +182,17 @@ pydantic==2.12.5
     #   fastapi
     #   fastapi-pagination
     #   fastapi-service
+    #   pydantic-extra-types
     #   pydantic-settings
     #   sqlalchemy-crud-plus
 pydantic-core==2.41.5
     # via pydantic
+pydantic-extra-types==2.10.6
+    # via fastapi
 pydantic-settings==2.12.0
-    # via fastapi-service
+    # via
+    #   fastapi
+    #   fastapi-service
 pygments==2.19.2
     # via
     #   pytest
@@ -197,13 +204,13 @@ python-dotenv==1.2.1
     # via
     #   pydantic-settings
     #   uvicorn
-python-engineio==4.12.3
+python-engineio==4.13.0
     # via python-socketio
 python-jose==3.5.0
     # via fastapi-service
-python-multipart==0.0.20
+python-multipart==0.0.21
     # via fastapi
-python-socketio==5.15.0
+python-socketio==5.16.0
     # via fastapi-service
 pytz==2025.2
     # via flower
@@ -222,13 +229,13 @@ rich==14.2.0
     # via
     #   rich-toolkit
     #   typer
-rich-toolkit==0.17.0
+rich-toolkit==0.17.1
     # via fastapi-cli
 rsa==4.9.1
     # via python-jose
 rtoml==0.13.0
     # via fastapi-service
-ruff==0.14.9
+ruff==0.14.10
 shellingham==1.5.4
     # via typer
 simple-websocket==1.1.0
@@ -254,9 +261,9 @@ termcolor==3.2.0
     # via commitizen
 tomlkit==0.13.3
     # via commitizen
-tornado==6.5.3
+tornado==6.5.4
     # via flower
-typer==0.20.0
+typer==0.21.0
     # via fastapi-cli
 typing-extensions==4.15.0
     # via
@@ -265,6 +272,7 @@ typing-extensions==4.15.0
     #   fastapi-pagination
     #   pydantic
     #   pydantic-core
+    #   pydantic-extra-types
     #   rich-toolkit
     #   sqlalchemy
     #   typer
@@ -285,7 +293,7 @@ ua-parser-builtins==0.18.0.post1
     # via ua-parser
 user-agents==2.2.0
     # via fastapi-service
-uvicorn==0.38.0
+uvicorn==0.40.0
     # via
     #   fastapi
     #   fastapi-cli
