--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
-  "telemetry.telemetryLevel": "off",
-  "security.workspace.trust.untrustedFiles": "open",
-  "explorer.confirmDelete": false,
+  "workbench.editor.autoLockGroups": { "mainThreadWebview-simpleBrowser.view": false },
+
   "explorer.confirmDragAndDrop": false,
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.expand": false,
@@ -14,17 +13,13 @@
     "Dockerfile": "Dockerfile.*, .dockerignore, docker-compose.yml, docker-compose.*.yml",
     "docker-compose.yml": "docker-compose.*.yml, .dockerignore"
   },
-  "workbench.colorTheme": "One Dark Pro",
-  "workbench.startupEditor": "welcomePage",
-  "workbench.iconTheme": "material-icon-theme",
-  "workbench.editor.autoLockGroups": { "mainThreadWebview-simpleBrowser.view": false },
-  "workbench.settings.applyToAllProfiles": ["files.dialog.defaultPath"],
-  "settingsSync.ignoredSettings": ["-files.dialog.defaultPath"],
+
   "terminal.integrated.fontSize": 16,
   "terminal.integrated.lineHeight": 1.1,
   "terminal.integrated.fontWeight": "normal",
   "terminal.integrated.enableMultiLinePasteWarning": "never",
-  "terminal.integrated.fontFamily": "'FiraCode Nerd Font Mono', Consolas, 'Courier New', monospace",
+  "terminal.integrated.fontFamily": "'JetBrains Mono', 'FiraCode Nerd Font Mono', Consolas, 'Courier New', monospace",
+
   "editor.tabSize": 2,
   "editor.fontSize": 18,
   "editor.wordWrap": "on",
@@ -37,17 +32,20 @@
   "editor.guides.bracketPairs": "active",
   "editor.cursorSmoothCaretAnimation": "on",
   "editor.unicodeHighlight.nonBasicASCII": false,
-  "editor.fontFamily": "'FiraCode Nerd Font', Consolas, 'Courier New', monospace",
+  "editor.fontFamily": "'JetBrains Mono', 'FiraCode Nerd Font', Consolas, 'Courier New', monospace",
   "editor.unicodeHighlight.allowedCharacters": {
     "：": true,
     "（": true,
-    "）": true
+    "）": true,
+    "，": true,
+    "。": true
   },
   "editor.codeActionsOnSave": {
     "source.fixAll": "explicit",
     "source.fixAll.ruff": "explicit"
   },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
+
   "[python]": {
     "editor.tabSize": 4,
     "editor.defaultFormatter": "charliermarsh.ruff",
@@ -56,41 +54,16 @@
       "source.organizeImports.ruff": "explicit"
     }
   },
-  "[json]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[jsonc]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[toml]": {
-    "editor.defaultFormatter": "tamasfe.even-better-toml"
-  },
-  "[yaml]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[groovy]": {
-    "editor.tabSize": 2,
-    "editor.insertSpaces": true
-  },
-  "[shellscript]": {
-    "editor.defaultFormatter": "foxundermoon.shell-format"
-  },
-  "[dotenv]": {
-    "editor.defaultFormatter": "foxundermoon.shell-format"
-  },
-  "[ignore]": {
-    "editor.defaultFormatter": "foxundermoon.shell-format"
-  },
-  "[properties]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[markdown]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
+
   "files.simpleDialog.enable": true,
+  "files.trimTrailingWhitespace": true,
+  "files.trimFinalNewlines": true,
+  "files.insertFinalNewline": true,
   "files.associations": {
     "*.json": "jsonc",
-    "*.json5": "json5"
+    "*rc": "jsonc",
+    ".*ignore": "ignore",
+    ".env*": "dotenv"
   },
   "files.exclude": {
     "**/.svn": true,
@@ -113,19 +86,15 @@
     "**/*cache": true,
     "**/__pycache__": true
   },
+
   "emmet.includeLanguages": {},
+
   "prettier.enable": true,
   "prettier.printWidth": 120,
   "prettier.singleQuote": true,
   "prettier.endOfLine": "lf",
-  "python.analysis.autoImportCompletions": true,
-  "python.analysis.typeCheckingMode": "standard",
-  "python.analysis.inlayHints.functionReturnTypes": true,
-  "python.analysis.inlayHints.pytestParameters": true,
-  "python.analysis.inlayHints.callArgumentNames": "partial",
-  "redhat.telemetry.enabled": false,
+
   "git.autofetch": true,
   "git.enableSmartCommit": true,
-  "git.confirmSync": false,
-  "github.copilot.chat.localeOverride": "zh-CN"
+  "git.confirmSync": false
 }
