🏗️ build(deploy): 新增项目 Dockerfile

--- a/env/.env
+++ b/env/.env
@@ -12,7 +12,7 @@ REDIS_PASSWORD=
 REDIS_DATABASE=
 
 # Token
-TOKEN_SECRET_KEY =
+TOKEN_SECRET_KEY=
 
 # Operation log
-OPERATION_LOG_ENCRYPT_SECRET_KEY =
+OPERATION_LOG_ENCRYPT_SECRET_KEY=
