--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,10 @@ bidict==0.23.1
     # via python-socketio
 billiard==4.2.4
     # via celery
+boolean-py==5.0
+    # via license-expression
+cachecontrol==0.14.4
+    # via pip-audit
 celery==5.6.2
     # via
     #   fastapi-service
@@ -33,12 +37,15 @@ certifi==2026.1.4
     # via
     #   httpcore
     #   httpx
+    #   requests
 cffi==2.0.0 ; platform_python_implementation != 'PyPy'
     # via cryptography
 cfgv==3.5.0
     # via pre-commit
 charset-normalizer==3.4.4
-    # via commitizen
+    # via
+    #   commitizen
+    #   requests
 click==8.3.1
     # via
     #   celery
@@ -62,11 +69,15 @@ colorama==0.4.6
     #   loguru
     #   pytest
     #   uvicorn
-commitizen==4.12.1
+commitizen==4.13.0
 cryptography==46.0.4
     # via fastapi-service
+cyclonedx-python-lib==11.6.0
+    # via pip-audit
 decli==0.6.3
     # via commitizen
+defusedxml==0.7.1
+    # via py-serializable
 deprecated==1.3.1
     # via commitizen
 distlib==0.4.0
@@ -88,13 +99,15 @@ fastapi-cli==0.0.20
     # via fastapi
 fastapi-limiter==0.1.6
     # via fastapi-service
-fastapi-pagination==0.15.8
+fastapi-pagination==0.15.9
     # via fastapi-service
 filelock==3.20.3
-    # via virtualenv
+    # via
+    #   cachecontrol
+    #   virtualenv
 flower==2.0.1
     # via fastapi-service
-granian==2.6.1
+granian==2.7.0
     # via fastapi-service
 greenlet==3.3.1
     # via sqlalchemy
@@ -120,6 +133,7 @@ idna==3.11
     #   anyio
     #   email-validator
     #   httpx
+    #   requests
 iniconfig==2.3.0
     # via pytest
 itsdangerous==2.2.0
@@ -130,6 +144,8 @@ jinja2==3.1.6
     #   fastapi
 kombu==5.6.2
     # via celery
+license-expression==30.4.4
+    # via cyclonedx-python-lib
 loguru==0.7.3
     # via fastapi-service
 mako==1.3.10
@@ -142,19 +158,34 @@ markupsafe==3.0.3
     #   mako
 mdurl==0.1.2
     # via markdown-it-py
+msgpack==1.1.2
+    # via cachecontrol
 msgspec==0.20.0
     # via fastapi-service
 nodeenv==1.10.0
     # via pre-commit
+packageurl-python==0.17.6
+    # via cyclonedx-python-lib
 packaging==26.0
     # via
     #   commitizen
     #   kombu
+    #   pip-audit
+    #   pip-requirements-parser
     #   pytest
 pillow==12.1.0
     # via fast-captcha
+pip==26.0
+    # via pip-api
+pip-api==0.0.34
+    # via pip-audit
+pip-audit==2.10.0
+pip-requirements-parser==32.0.1
+    # via pip-audit
 platformdirs==4.5.1
-    # via virtualenv
+    # via
+    #   pip-audit
+    #   virtualenv
 pluggy==1.6.0
     # via pytest
 pre-commit==4.5.1
@@ -171,6 +202,8 @@ pwdlib==0.3.0
     # via fastapi-service
 py-ip2region==3.0.2
     # via fastapi-service
+py-serializable==2.1.0
+    # via cyclonedx-python-lib
 pyasn1==0.6.2
     # via
     #   python-jose
@@ -196,6 +229,8 @@ pygments==2.19.2
     # via
     #   pytest
     #   rich
+pyparsing==3.3.2
+    # via pip-requirements-parser
 pytest==9.0.2
 python-dateutil==2.9.0.post0
     # via celery
@@ -224,11 +259,16 @@ redis==7.1.0
     # via
     #   fastapi-limiter
     #   fastapi-service
-rich==14.3.1
+requests==2.32.5
     # via
+    #   cachecontrol
+    #   pip-audit
+rich==14.3.2
+    # via
+    #   pip-audit
     #   rich-toolkit
     #   typer
-rich-toolkit==0.17.2
+rich-toolkit==0.18.1
     # via fastapi-cli
 rsa==4.9.1
     # via python-jose
@@ -243,6 +283,8 @@ six==1.17.0
     # via
     #   ecdsa
     #   python-dateutil
+sortedcontainers==2.4.0
+    # via cyclonedx-python-lib
 sqlalchemy==2.0.46
     # via
     #   alembic
@@ -255,6 +297,10 @@ starlette-context==0.4.0
     # via fastapi-service
 termcolor==3.3.0
     # via commitizen
+tomli==2.4.0
+    # via pip-audit
+tomli-w==1.2.0
+    # via pip-audit
 tomlkit==0.14.0
     # via commitizen
 tornado==6.5.4
@@ -285,8 +331,10 @@ tzlocal==5.3.1
     # via celery
 ua-parser==1.0.1
     # via user-agents
-ua-parser-builtins==202601
+ua-parser-builtins==202602
     # via ua-parser
+urllib3==2.6.3
+    # via requests
 user-agents==2.2.0
     # via fastapi-service
 uvicorn==0.40.0
@@ -304,13 +352,13 @@ virtualenv==20.36.1
     # via pre-commit
 watchfiles==1.1.1
     # via uvicorn
-wcwidth==0.5.2
+wcwidth==0.5.3
     # via prompt-toolkit
 websockets==16.0
     # via uvicorn
 win32-setctime==1.2.0 ; sys_platform == 'win32'
     # via loguru
-wrapt==2.0.1
+wrapt==2.1.1
     # via deprecated
 wsproto==1.3.2
     # via simple-websocket
