--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,5 @@
 repos:
+  # 基础文件检查（通用）
   - repo: git@github.com:pre-commit/pre-commit-hooks.git
     rev: v6.0.0
     hooks:
@@ -19,27 +20,40 @@ repos:
       - id: debug-statements
       - id: detect-private-key
 
+  # Ruff: Python 代码检查与格式化
   - repo: git@github.com:astral-sh/ruff-pre-commit.git
-    rev: v0.15.1
+    rev: v0.15.4
     hooks:
       - id: ruff-check
         args: ['--config', 'ruff.toml', '--fix', '--unsafe-fixes']
         types_or: ['python', 'pyi']
       - id: ruff-format
+        args: ['--config', 'ruff.toml']
         types_or: ['python', 'pyi']
 
+  # Bandit: Python 安全检查
   - repo: git@github.com:PyCQA/bandit.git
-    rev: 1.9.3
+    rev: 1.9.4
     hooks:
       - id: bandit
         additional_dependencies: ['bandit[toml]']
         args: ['-c', 'pyproject.toml', '--skip', 'B101']
         exclude: ^(tests/|test_.*\.py$)
 
+  # UV: 依赖管理
   - repo: git@github.com:astral-sh/uv-pre-commit.git
-    rev: 0.10.2
+    rev: 0.10.7
     hooks:
       - id: uv-lock
         args: [--frozen, --quiet]
       - id: uv-export
         args: ['--format', 'requirements-txt', '-o', 'requirements.txt', '--quiet']
+
+  # Commitizen: 提交信息规范
+  - repo: git@github.com:commitizen-tools/commitizen.git
+    rev: v4.13.9
+    hooks:
+      - id: commitizen
+      - id: commitizen-branch
+        stages:
+          - pre-push
